<resources>
    <string name="app_name">Terraria</string>
    <string name="app_title">Terraria</string>
    <string name="percent">%</string>
    <string name="degrees">\u2103</string>
    <string name="noendtime">geen eindtijd</string>
    <string name="seconds">seconden</string>
    <string name="minutes">minuten</string>
    <string name="btnSave">Opslaan</string>
    <string name="btnDone">Gereed</string>
    <string name="btnRefresh">Vernieuwen</string>
    <string name="mitConfig">Instellingen</string>
    <string name="mitState">Toestand van de apparaten</string>
    <string name="mitTimers">Tijdklokken</string>
    <string name="mitRuleset">Regelingen</string>
    <string name="mitHelp">Help</string>
    <string name="light1">Lamp 1</string>
    <string name="light2">Lamp 2</string>
    <string name="light3">Lamp 3</string>
    <string name="light4">Lamp 4</string>
    <string name="light5">Lamp 5</string>
    <string name="light6">Lamp 6</string>
    <string name="uvlight">UV Lamp</string>
    <string name="pump">Achterwand</string>
    <string name="sprayer">Sproeier</string>
    <string name="mist">Vernevelaar</string>
    <string name="fan_in">Ventilator In</string>
    <string name="fan_out">Ventilator Uit</string>
    <string name="spare">Reserve</string>
    <string name="on">aan</string>
    <string name="off">uit</string>
    <string name="lblOnOff">aan/uit</string>
    <string name="lblManual">handmatig</string>
    <string name="st_btnRefresh">Vernieuwen</string>
    <string name="st_tvwClock">Klok:</string>
    <string name="dlg_tvwResetHours1">Geef het totaal aantal branduren op</string>
    <string name="lblOnPeriod">Hoe lang moet het apparaat aan staan?</string>
    <string name="lblOnPeriod2">Geef waarde op in seconden, max 3600.</string>
    <string name="lblOnPeriod3">Geen waarde is geen eindtijd.</string>
    <string name="dltOnPeriod">Aan periode</string>
    <string name="edtOnPeriod"></string>
    <string name="dlt_btnSave">Ok</string>
    <string name="dlt_btnCancel">Annuleer</string>
    <string name="st_btnManual">Stel in</string>
    <string name="st_tvwTerrarium">Terrarium:</string>
    <string name="st_tvwRoom">Kamer:</string>
    <string name="st_tvwCpu">CPU:</string>
    <string name="st_tvwStill">nog</string>
    <string name="st_tvwHours">branduren</string>
    <string name="it_tvwEvery">elke</string>
    <string name="it_tvwDay">dag(en)</string>
    <string name="it_tvwFor">gedurende</string>
    <string name="lblSprayingRules">Droogregeling</string>
    <string name="rs_lblActive">Aktief</string>
    <string name="rs_lblFrom">van</string>
    <string name="rs_lblTo">tot</string>
    <string name="rs_lblIdeal">Gewenste temperatuur</string>
    <string name="rs_lblTempRuleText1">Als de temperatuur</string>
    <string name="rs_lblTempRuleText2a">boven</string>
    <string name="rs_lblTempRuleText2b">onder</string>
    <string name="rs_lblTempRuleText3">komt dan</string>
    <string name="rs_lblActionText1">zet</string>
    <string name="rs_lblActionText2">aan</string>
    <string name="rs_lblActionText3a">voor</string>
    <string name="rs_lblActionText3b">totdat de gewenste waarde bereikt is</string>
    <string name="rs_lblActionText4">en</string>
    <string name="dr_lblActionText1">zet</string>
    <string name="dr_lblActionText2">aan voor</string>
    <string name="dr_lblDelay1">Wanneer</string>
    <string name="dr_lblDelay2">uitgezet wordt wacht dan</string>
    <string name="dr_lblDelay3">en dan</string>
    <string name="dr_lblAnd">en</string>
    <string name="hisTitle">Schakel en temperatuur historie op dag</string>
    <string name="his_btnOk">Gereed</string>
    <string name="mitHistory">Historie</string>
    <string name="tabName">%1$s%2$s</string>
    <string name="tcuName">%1$s UUID</string>
    <string name="temperature">%1$d</string>
    <string name="humidity">%1$d</string>
    <string name="hoursOn">%1$d</string>
    <string name="cfg_name">Terraria Configuratie</string>
    <string name="cfg_title">Terraria Configuratie</string>
    <string name="cfgTitle">Configuratie</string>
    <string name="cfgNrOfTerraria">Aantal te beheren terraria (1..10)</string>
    <string name="cfgHostName">Host name van de TCU</string>
    <string name="cfgTerrariumName">Naam van het terrarium</string>
    <string name="cfgUUID">Bluetooth UUID van de TCU</string>
    <string name="cfgIpAddress">IP adres van de TCU</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
