<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/cfg_btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/btnDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cfgTitle"
            android:layout_marginStart="-120dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNrOfTerraria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:text="@string/cfgNrOfTerraria" />

            <EditText
                android:id="@+id/edtNrOfTerraria"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="right"
                android:textSize="24sp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/terrariaButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cfg_terrarium"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>